--- a/src/components/index.css
+++ b/src/components/index.css
@@ -68,3 +68,54 @@
   right: -4px;
   cursor: se-resize;
 }
+
+/* Rotate handle */
+.vdr-rotate-handle {
+  box-sizing: border-box;
+  position: absolute;
+  width: 14px;
+  height: 14px;
+  background: #fff;
+  border: 2px solid #1890ff;
+  border-radius: 50%;
+  top: -30px;
+  left: 50%;
+  margin-left: -7px;
+  cursor: grab;
+  z-index: 10;
+}
+.vdr-rotate-handle:hover {
+  background: #e6f7ff;
+  border-color: #40a9ff;
+}
+.vdr-rotate-handle:active {
+  cursor: grabbing;
+}
+/* Rotate handle connector line */
+.vdr-rotate-handle::before {
+  content: '';
+  position: absolute;
+  width: 1px;
+  height: 16px;
+  background: #1890ff;
+  top: 12px;
+  left: 50%;
+  margin-left: -0.5px;
+}
+/* Rotate icon inside handle */
+.vdr-rotate-handle::after {
+  content: '';
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  border: 2px solid #1890ff;
+  border-radius: 50%;
+  border-top-color: transparent;
+  top: 1px;
+  left: 1px;
+}
+
+/* Rotating state */
+.vdr-container.rotating {
+  z-index: 9999 !important;
+}
